with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.19.1
====================
[2872829] Duplicate Entry now copies password policy as well.
[2870059] When an entry is highlighted during Find, the Toolbar and menu
items now reflect its contents.
[2868278] Minimize via the system menu, SystemTray menu and system control
box button now locks the database if the preference 'Lock on Minimize' is
set.
[2868244] Change font dialogs now work again.
[] Now no longer complains about WTS service in Windows systems earlier
than Windows XP.

New Features for 3.19.1
=======================
[2872273] Improve Import Text 'Line skipped' message.

Changes to Existing Features in 3.19.1
======================================
[2868278] The SystemTray Unlock menu item now, if the correct passphrase is
given, only unlocks the databse. To show the application, use the Restore
menu item.

Bugs fixed in 3.19
==================
[2865116] Status-Bar message now correctly states "Password Copied"
when doing a "Run Command".
[2865116] Status-Bar message now updated when using the keyboard arrows
to transverse entries in Tree and List views.
[2856750] The Password Policy now correctly displayed in List View,
when selected.
[2856051] Changes to database preferences are no longer lost upon minimize.
[2856410] The "Run Command" menu entry is no longer greyed out for
Shortcuts to base entries with a Run Command.
[2851848] Mouse double-click interval removed from Virtual Keyboard
to allow multiple virtual keys to be entered quickly.
[2850907] Password field no longer cleared after focus change.
[2842700] No longer crashes when using a French keyboard.
[2192490, 2840534] Multiple desktops now handled correctly for Windows