@@ -12,7 +12,6 @@
 #include "resource3.h"  // STRING resources
 #include "..\..\corelib\corelib.h"  // corelib STRING resources
 #include "VirtualKeyboard\VKresource.h"  // Virtual Keyboard resource
-
 /////////////////////////////////////////////////////////////////////////////
 #undef APSTUDIO_READONLY_SYMBOLS
 
@@ -506,7 +505,7 @@ BEGIN
     PUSHBUTTON      "Advanced...",IDC_EXPORT_ADVANCED,150,128,50,14
     RTEXT           "Safe Combination:",IDC_STATIC,10,84,58,8
     LTEXT           "Warning! This operation will create an unprotected copy of ALL of the passwords in the database. Deleting this copy after use is NOT sufficient.",IDC_EXPWARNING1,7,3,261,40
-    LTEXT           "Please do not use this option unless you understand and accept the risks.  This option bypasses the security provided by this program.",IDC_EXPWARNING2,7,44,261,31
+    LTEXT           "Please do not use this option unless you understand and accept the risks. This option bypasses the security provided by this program.",IDC_EXPWARNING2,7,44,261,31
     LTEXT           "Also used to replace periods in the Title field.",IDC_STATIC,116,101,145,17
     RTEXT           "Line delimiter in Notes field:",IDC_STATIC,7,101,91,17
     CONTROL         8000,IDC_VKB,"Static",SS_BITMAP | SS_NOTIFY,257,84,21,10,WS_EX_TRANSPARENT
@@ -684,22 +683,22 @@ BEGIN
     COMBOBOX        IDC_DCA1,46,28,108,86,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_EXPORT_XML DIALOGEX 0, 0, 281, 133
+IDD_EXPORT_XML DIALOGEX 0, 0, 284, 149
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Export XML"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    EDITTEXT        IDC_EXPORT_XML_PASSWORD,71,69,180,14,ES_PASSWORD | ES_AUTOHSCROLL
-    RTEXT           "Line delimiter in Notes field:",IDC_STATIC,7,94,127,8
-    EDITTEXT        IDC_DEFEXPDELIM,137,92,12,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,16,112,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,82,112,50,14
-    PUSHBUTTON      "&Help",ID_HELP,214,112,50,14
-    PUSHBUTTON      "Advanced...",IDC_XML_ADVANCED,148,112,50,14
-    RTEXT           "Safe Combination:",IDC_STATIC,10,71,58,8
-    LTEXT           "Warning! This operation will create an unprotected copy of ALL of the passwords in the database. Deleting this copy after use is *NOT* sufficient. This bypasses the security of the program.",IDC_STATIC,7,10,261,26
-    LTEXT           "Please do not use this option unless you understand and accept the risks.",IDC_STATIC,7,44,261,20
-    CONTROL         8000,IDC_VKB,"Static",SS_BITMAP | SS_NOTIFY,257,71,21,10,WS_EX_TRANSPARENT
+    EDITTEXT        IDC_EXPORT_XML_PASSWORD,71,85,180,14,ES_PASSWORD | ES_AUTOHSCROLL
+    RTEXT           "Line delimiter in Notes field:",IDC_STATIC,7,110,127,8
+    EDITTEXT        IDC_DEFEXPDELIM,137,108,12,12,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,16,128,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,82,128,50,14
+    PUSHBUTTON      "&Help",ID_HELP,214,128,50,14
+    PUSHBUTTON      "Advanced...",IDC_XML_ADVANCED,148,128,50,14
+    RTEXT           "Safe Combination:",IDC_STATIC,10,87,58,8
+    LTEXT           "Warning! This operation will create an unprotected copy of ALL of the passwords in the database. Deleting this copy after use is NOT sufficient.",IDC_EXPWARNING1,7,3,261,40
+    LTEXT           "Please do not use this option unless you understand and accept the risks. This option bypasses the security provided by this program.",IDC_EXPWARNING2,7,44,261,31
+    CONTROL         8000,IDC_VKB,"Static",SS_BITMAP | SS_NOTIFY,257,87,21,10,WS_EX_TRANSPARENT
 END
 
 IDD_IMPORT_TEXT DIALOGEX 0, 0, 220, 105
@@ -1531,7 +1530,6 @@ LANGUAGE 9, 1
 #include "afxres.rc"         // Standard components
 #endif
 #endif
-
 /////////////////////////////////////////////////////////////////////////////
 #endif    // not APSTUDIO_INVOKED
 
