@@ -1889,11 +1889,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\about.bmp"
+				RelativePath="..\graphics\toolbar\classic\about.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\about.bmp"
+				RelativePath="..\graphics\toolbar\new\about.bmp"
 				>
 			</File>
 			<File
@@ -1913,11 +1913,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\add.bmp"
+				RelativePath="..\graphics\toolbar\new\add.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\add.bmp"
+				RelativePath="..\graphics\toolbar\classic\add.bmp"
 				>
 			</File>
 			<File
@@ -1945,11 +1945,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\applyfilter.bmp"
+				RelativePath="..\graphics\toolbar\new\applyfilter.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\applyfilter.bmp"
+				RelativePath="..\graphics\toolbar\classic\applyfilter.bmp"
 				>
 			</File>
 			<File
@@ -1993,11 +1993,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\backup.bmp"
+				RelativePath="..\graphics\toolbar\classic\backup.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\backup.bmp"
+				RelativePath="..\graphics\toolbar\new\backup.bmp"
 				>
 			</File>
 			<File
@@ -2021,11 +2021,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\browseurl.bmp"
+				RelativePath="..\graphics\toolbar\new\browseurl.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\browseurl.bmp"
+				RelativePath="..\graphics\toolbar\classic\browseurl.bmp"
 				>
 			</File>
 			<File
@@ -2069,11 +2069,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\changecombo.bmp"
+				RelativePath="..\graphics\toolbar\classic\changecombo.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\changecombo.bmp"
+				RelativePath="..\graphics\toolbar\new\changecombo.bmp"
 				>
 			</File>
 			<File
@@ -2093,11 +2093,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\changefont.bmp"
+				RelativePath="..\graphics\toolbar\new\changefont.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\changefont.bmp"
+				RelativePath="..\graphics\toolbar\classic\changefont.bmp"
 				>
 			</File>
 			<File
@@ -2141,11 +2141,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\changevkbdfont.bmp"
+				RelativePath="..\graphics\toolbar\classic\changevkbdfont.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\changevkbdfont.bmp"
+				RelativePath="..\graphics\toolbar\new\changevkbdfont.bmp"
 				>
 			</File>
 			<File
@@ -2157,11 +2157,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\clearclipboard.bmp"
+				RelativePath="..\graphics\toolbar\classic\clearclipboard.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\clearclipboard.bmp"
+				RelativePath="..\graphics\toolbar\new\clearclipboard.bmp"
 				>
 			</File>
 			<File
@@ -2181,11 +2181,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\close.bmp"
+				RelativePath="..\graphics\toolbar\classic\close.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\close.bmp"
+				RelativePath="..\graphics\toolbar\new\close.bmp"
 				>
 			</File>
 			<File
@@ -2205,11 +2205,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\collapseall.bmp"
+				RelativePath="..\graphics\toolbar\new\collapseall.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\collapseall.bmp"
+				RelativePath="..\graphics\toolbar\classic\collapseall.bmp"
 				>
 			</File>
 			<File
@@ -2253,11 +2253,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\copynotes.bmp"
+				RelativePath="..\graphics\toolbar\new\copynotes.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\copynotes.bmp"
+				RelativePath="..\graphics\toolbar\classic\copynotes.bmp"
 				>
 			</File>
 			<File
@@ -2277,11 +2277,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\copypassword.bmp"
+				RelativePath="..\graphics\toolbar\new\copypassword.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\copypassword.bmp"
+				RelativePath="..\graphics\toolbar\classic\copypassword.bmp"
 				>
 			</File>
 			<File
@@ -2345,11 +2345,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\createshortcut.bmp"
+				RelativePath="..\graphics\toolbar\classic\createshortcut.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\createshortcut.bmp"
+				RelativePath="..\graphics\toolbar\new\createshortcut.bmp"
 				>
 			</File>
 			<File
@@ -2369,11 +2369,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\cutsomizetoolbar.bmp"
+				RelativePath="..\graphics\toolbar\classic\cutsomizetoolbar.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\cutsomizetoolbar.bmp"
+				RelativePath="..\graphics\toolbar\new\cutsomizetoolbar.bmp"
 				>
 			</File>
 			<File
@@ -2385,11 +2385,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\delete.bmp"
+				RelativePath="..\graphics\toolbar\new\delete.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\delete.bmp"
+				RelativePath="..\graphics\toolbar\classic\delete.bmp"
 				>
 			</File>
 			<File
@@ -2433,6 +2433,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\graphics\dragbar\new\email.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\dragbar\classic\email.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\dragbar\new\emailX.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\dragbar\classic\emailx.bmp"
+				>
+			</File>
+			<File
 				RelativePath="..\graphics\empty.bmp"
 				>
 			</File>
@@ -2441,11 +2457,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\exit.bmp"
+				RelativePath="..\graphics\toolbar\new\exit.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\exit.bmp"
+				RelativePath="..\graphics\toolbar\classic\exit.bmp"
 				>
 			</File>
 			<File
@@ -2489,11 +2505,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\export.bmp"
+				RelativePath="..\graphics\toolbar\classic\export.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\export.bmp"
+				RelativePath="..\graphics\toolbar\new\export.bmp"
 				>
 			</File>
 			<File
@@ -2513,11 +2529,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\exporttext.bmp"
+				RelativePath="..\graphics\toolbar\new\exporttext.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\exporttext.bmp"
+				RelativePath="..\graphics\toolbar\classic\exporttext.bmp"
 				>
 			</File>
 			<File
@@ -2597,11 +2613,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\findadvanced.bmp"
+				RelativePath="..\graphics\toolbar\new\findadvanced.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\findadvanced.bmp"
+				RelativePath="..\graphics\toolbar\classic\findadvanced.bmp"
 				>
 			</File>
 			<File
@@ -2629,11 +2645,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\findcase_s.bmp"
+				RelativePath="..\graphics\toolbar\classic\findcase_s.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\findcase_s.bmp"
+				RelativePath="..\graphics\toolbar\new\findcase_s.bmp"
 				>
 			</File>
 			<File
@@ -2645,11 +2661,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\findclear.bmp"
+				RelativePath="..\graphics\toolbar\classic\findclear.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\findclear.bmp"
+				RelativePath="..\graphics\toolbar\new\findclear.bmp"
 				>
 			</File>
 			<File
@@ -2661,11 +2677,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\findclose.bmp"
+				RelativePath="..\graphics\toolbar\classic\findclose.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\findclose.bmp"
+				RelativePath="..\graphics\toolbar\new\findclose.bmp"
 				>
 			</File>
 			<File
@@ -2729,19 +2745,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\new\GroupX.bmp"
-				>
-			</File>
-			<File
 				RelativePath="..\graphics\dragbar\classic\GroupX.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\help.bmp"
+				RelativePath="..\graphics\dragbar\new\GroupX.bmp"
 				>
 			</File>
 			<File
 				RelativePath="..\graphics\toolbar\classic\help.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\toolbar\new\help.bmp"
 				>
 			</File>
 			<File
@@ -2785,11 +2801,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\importtext.bmp"
+				RelativePath="..\graphics\toolbar\classic\importtext.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\importtext.bmp"
+				RelativePath="..\graphics\toolbar\new\importtext.bmp"
 				>
 			</File>
 			<File
@@ -2833,11 +2849,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\listtree.bmp"
+				RelativePath="..\graphics\toolbar\new\listtree.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\listtree.bmp"
+				RelativePath="..\graphics\toolbar\classic\listtree.bmp"
 				>
 			</File>
 			<File
@@ -2885,11 +2901,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\managefilters.bmp"
+				RelativePath="..\graphics\toolbar\new\managefilters.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\managefilters.bmp"
+				RelativePath="..\graphics\toolbar\classic\managefilters.bmp"
 				>
 			</File>
 			<File
@@ -2933,11 +2949,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\new.bmp"
+				RelativePath="..\graphics\toolbar\classic\new.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\new.bmp"
+				RelativePath="..\graphics\toolbar\new\new.bmp"
 				>
 			</File>
 			<File
@@ -3009,15 +3025,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\Notes.bmp"
-				>
-			</File>
-			<File
 				RelativePath="..\graphics\dragbar\new\Notes.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\NotesX.bmp"
+				RelativePath="..\graphics\dragbar\classic\Notes.bmp"
 				>
 			</File>
 			<File
@@ -3025,11 +3037,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\open.bmp"
+				RelativePath="..\graphics\dragbar\classic\NotesX.bmp"
 				>
 			</File>
 			<File
 				RelativePath="..\graphics\toolbar\new\open.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\toolbar\classic\open.bmp"
 				>
 			</File>
 			<File
@@ -3049,11 +3065,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\options.bmp"
+				RelativePath="..\graphics\toolbar\classic\options.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\options.bmp"
+				RelativePath="..\graphics\toolbar\new\options.bmp"
 				>
 			</File>
 			<File
@@ -3189,11 +3205,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\new\PasswordX.bmp"
+				RelativePath="..\graphics\dragbar\classic\PasswordX.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\PasswordX.bmp"
+				RelativePath="..\graphics\dragbar\new\PasswordX.bmp"
 				>
 			</File>
 			<File
@@ -3253,11 +3269,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\runcmd.bmp"
+				RelativePath="..\graphics\toolbar\new\runcmd.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\runcmd.bmp"
+				RelativePath="..\graphics\toolbar\classic\runcmd.bmp"
 				>
 			</File>
 			<File
@@ -3277,11 +3293,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\save.bmp"
+				RelativePath="..\graphics\toolbar\classic\save.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\save.bmp"
+				RelativePath="..\graphics\toolbar\new\save.bmp"
 				>
 			</File>
 			<File
@@ -3373,11 +3389,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\setfilter.bmp"
+				RelativePath="..\graphics\toolbar\classic\setfilter.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\setfilter.bmp"
+				RelativePath="..\graphics\toolbar\new\setfilter.bmp"
 				>
 			</File>
 			<File
@@ -3405,19 +3421,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\Title.bmp"
-				>
-			</File>
-			<File
 				RelativePath="..\graphics\dragbar\new\Title.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\new\TitleX.bmp"
+				RelativePath="..\graphics\dragbar\classic\Title.bmp"
 				>
 			</File>
 			<File
 				RelativePath="..\graphics\dragbar\classic\TitleX.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\dragbar\new\TitleX.bmp"
 				>
 			</File>
 			<File
@@ -3441,11 +3457,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\unlock.bmp"
+				RelativePath="..\graphics\toolbar\classic\unlock.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\unlock.bmp"
+				RelativePath="..\graphics\toolbar\new\unlock.bmp"
 				>
 			</File>
 			<File
@@ -3469,15 +3485,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\URL.bmp"
-				>
-			</File>
-			<File
 				RelativePath="..\graphics\dragbar\new\URL.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\URLX.bmp"
+				RelativePath="..\graphics\dragbar\classic\URL.bmp"
 				>
 			</File>
 			<File
@@ -3485,7 +3497,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\classic\User.bmp"
+				RelativePath="..\graphics\dragbar\classic\URLX.bmp"
 				>
 			</File>
 			<File
@@ -3493,7 +3505,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\dragbar\new\UserX.bmp"
+				RelativePath="..\graphics\dragbar\classic\User.bmp"
 				>
 			</File>
 			<File
@@ -3501,11 +3513,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\validate.bmp"
+				RelativePath="..\graphics\dragbar\new\UserX.bmp"
 				>
 			</File>
 			<File
 				RelativePath="..\graphics\toolbar\new\validate.bmp"
+				>
+			</File>
+			<File
+				RelativePath="..\graphics\toolbar\classic\validate.bmp"
 				>
 			</File>
 			<File
@@ -3525,11 +3541,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\viewedit.bmp"
+				RelativePath="..\graphics\toolbar\classic\viewedit.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\viewedit.bmp"
+				RelativePath="..\graphics\toolbar\new\viewedit.bmp"
 				>
 			</File>
 			<File
@@ -3561,11 +3577,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\new\viewreports.bmp"
+				RelativePath="..\graphics\toolbar\classic\viewreports.bmp"
 				>
 			</File>
 			<File
-				RelativePath="..\graphics\toolbar\classic\viewreports.bmp"
+				RelativePath="..\graphics\toolbar\new\viewreports.bmp"
 				>
 			</File>
 			<File
